# share_area

./: .clang-format  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_zh.md
.github/workflows/: build-windows.yml  build.yml
resources/: Info.plist.in  resources.qrc
resources/icons/: icon.icns
script/: setup.iss  setup.iss.in
src/: constants.h  main.cpp
src/core/: app_settings.cpp  app_settings.h  auto_start.cpp  auto_start.h  shared_file.cpp  shared_file.h  single_instance_guard.cpp  single_instance_guard.h
src/network/: file_transfer_manager.cpp  file_transfer_manager.h  peer_discovery.cpp  peer_discovery.h
src/ui/: app_icon.cpp  app_icon.h  breathing_dot.cpp  breathing_dot.h  drop_area_widget.cpp  drop_area_widget.h  file_list_widget.cpp  file_list_widget.h  log_window.cpp  log_window.h  macos_blur.h  macos_blur.mm  main_window.cpp  main_window.h  peer_addresses_dialog.cpp  peer_addresses_dialog.h  setup_dialog.cpp  setup_dialog.h  system_tray.cpp  system_tray.h
translations/: share_area_en.ts  share_area_zh_CN.ts
